--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "jquery": "^3.4.1",
     "stats.js": "^0.17.0",
-    "three": "^0.113.2"
+    "three": "^0.113.2",
+    "three-orbitcontrols": "^2.110.3"
   }
 }
