--- a/static/manifest.json
+++ b/static/manifest.json
@@ -7,13 +7,13 @@
 	"start_url": "/",
 	"icons": [
 		{
-			"src": "logo-192.png",
-			"sizes": "192x192",
+			"src": "favicon.png",
+			"sizes": "64x64",
 			"type": "image/png"
 		},
 		{
-			"src": "logo-512.png",
-			"sizes": "512x512",
+			"src": "favicon1.png",
+			"sizes": "64x64",
 			"type": "image/png"
 		}
 	]
