--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "TODO",
-  "description": "TODO",
+  "name": "personal-site",
+  "description": "My personal site",
   "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
@@ -14,8 +14,7 @@
   "dependencies": {
     "compression": "^1.7.1",
     "polka": "next",
-    "sirv": "^0.4.0",
-    "svelte": "^3.0.0"
+    "sirv": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -33,6 +32,7 @@
     "rollup-plugin-babel": "^4.0.2",
     "rollup-plugin-svelte": "^5.0.1",
     "rollup-plugin-terser": "^4.0.4",
+    "svelte": "^3.0.0",
     "sapper": "^0.27.0",
     "svelte-preprocess": "^3.5.0"
   }
