--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,19 +1,19 @@
 {
 	"background_color": "#ffffff",
 	"theme_color": "#333333",
-	"name": "Valentin Rogg",
-	"short_name": "Rogg",
+	"name": "TODO",
+	"short_name": "TODO",
 	"display": "minimal-ui",
 	"start_url": "/",
 	"icons": [
 		{
-			"src": "favicon.png",
-			"sizes": "64x64",
+			"src": "logo-192.png",
+			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "favicon1.png",
-			"sizes": "64x64",
+			"src": "logo-512.png",
+			"sizes": "512x512",
 			"type": "image/png"
 		}
 	]
