--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "compression": "^1.7.1",
     "polka": "next",
+    "sanitize.css": "^12.0.1",
     "sirv": "^1.0.0"
   },
   "devDependencies": {
