--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "compression": "^1.7.1",
     "polka": "next",
     "sanitize.css": "^12.0.1",
-    "sirv": "^1.0.0"
+    "sirv": "^1.0.0",
+    "vanilla-tilt": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
