--- a/static/manifest.json
+++ b/static/manifest.json
@@ -2,7 +2,7 @@
 	"background_color": "#ffffff",
 	"theme_color": "#333333",
 	"name": "Valentin Rogg",
-	"short_name": "Rogg",
+	"short_name": "Valentin Rogg",
 	"display": "minimal-ui",
 	"start_url": "/",
 	"icons": [
