--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "sapper-personal",
-  "description": "Personal site built with sapper",
-  "version": "0.0.1",
+  "name": "personal-site",
+  "description": "personal site build with sapper",
+  "version": "1.0.0",
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build --legacy",
     "export": "sapper export --legacy",
-    "start": "node __sapper__/build"
+    "start": "node __sapper__/build",
+    "validate": "svelte-check --ignore src/node_modules/@sapper"
   },
   "dependencies": {
     "compression": "^1.7.1",
     "polka": "next",
-    "sirv": "^1.0.0",
-    "vanilla-tilt": "^1.7.0"
+    "sirv": "^1.0.0"
   },
   "devDependencies": {
+    "sapper": "^0.28.0",
+    "svelte": "^3.17.3",
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
@@ -24,14 +26,21 @@
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
-    "autoprefixer": "^10.0.0",
-    "postcss": "^8.0.9",
+    "@rollup/plugin-url": "^5.0.0",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8.1.2",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "sapper": "^0.28.0",
-    "sass": "^1.26.11",
-    "svelte": "^3.17.3",
-    "svelte-preprocess": "^4.3.0"
+    "@rollup/plugin-typescript": "^6.0.0",
+    "@tsconfig/svelte": "^1.0.10",
+    "@types/compression": "^1.7.0",
+    "@types/node": "^14.11.1",
+    "@types/polka": "^0.5.1",
+    "sass": "^1.27.0",
+    "svelte-check": "^1.0.46",
+    "svelte-preprocess": "^4.3.0",
+    "tslib": "^2.0.1",
+    "typescript": "^4.0.3"
   }
 }
