--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
 	"background_color": "#ffffff",
-	"theme_color": "#333333",
+	"theme_color": "#cba890",
 	"name": "Valentin Rogg",
 	"short_name": "Valentin Rogg",
 	"display": "minimal-ui",
