--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
   },
   "type": "module",
   "dependencies": {
-    "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1",
+    "form-data": "^4.0.0",
+    "formdata-node": "^4.3.2",
     "signature_pad": "^4.0.4",
-    "sveltekit-i18n": "^2.1.2"
+    "sveltekit-i18n": "^2.1.2",
+    "trim-canvas": "^0.1.2"
   }
 }
