--- a/archive/.gitignore
+++ b/archive/.gitignore
@@ -1,11 +1,11 @@
-/archive
 .DS_Store
 node_modules
 /build
 /.svelte-kit
 /package
-.env
+.env.local
 .env.*
 !.env.example
 .vercel
 .output
+.idea
