--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "website",
+  "name": "personal-site",
   "version": "0.0.1",
   "scripts": {
     "dev": "vite dev --port=8080",
@@ -34,6 +34,7 @@
   "type": "module",
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
-    "cookie": "^0.4.1"
+    "cookie": "^0.4.1",
+    "sveltekit-i18n": "^2.2.2"
   }
 }
