--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "@fontsource/fira-mono": "^4.5.0",
     "cookie": "^0.4.1",
     "form-data": "^4.0.0",
+    "form-data-encoder": "^2.1.0",
     "formdata-node": "^4.4.0",
     "signature_pad": "^4.0.7",
+    "stream": "^0.0.2",
     "sveltekit-i18n": "^2.2.2",
     "trim-canvas": "^0.1.2"
   }
