--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
     "cookie": "^0.4.1",
+    "faunadb": "^4.6.0",
     "form-data": "^4.0.0",
     "form-data-encoder": "^2.1.0",
     "formdata-node": "^4.4.0",
