--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "@types/cookie": "^0.5.1",
+    "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^8.16.0",
@@ -39,6 +40,7 @@
     "form-data": "^4.0.0",
     "form-data-encoder": "^2.1.0",
     "formdata-node": "^4.4.0",
+    "pg": "^8.8.0",
     "signature_pad": "^4.0.7",
     "stream": "^0.0.2",
     "sveltekit-i18n": "^2.2.2",
