Update package versions

--- a/package.json
+++ b/package.json
@@ -13,34 +13,34 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@playwright/test": "^1.25.0",
+    "@playwright/test": "1.25.1",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "1.0.0-next.444",
-    "@types/cookie": "^0.5.1",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "eslint": "^8.16.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "prettier": "^2.6.2",
-    "prettier-plugin-svelte": "^2.7.0",
-    "svelte": "^3.46.0",
-    "svelte-check": "^2.7.1",
-    "svelte-preprocess": "^4.10.6",
-    "tslib": "^2.3.1",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.8"
+    "@types/cookie": "0.5.1",
+    "@types/uuid": "8.3.4",
+    "@typescript-eslint/eslint-plugin": "5.35.1",
+    "@typescript-eslint/parser": "5.35.1",
+    "eslint": "8.23.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-svelte3": "4.0.0",
+    "prettier": "2.7.1",
+    "prettier-plugin-svelte": "2.7.0",
+    "svelte": "3.49.0",
+    "svelte-check": "2.8.1",
+    "svelte-preprocess": "4.10.7",
+    "tslib": "2.4.0",
+    "typescript": "4.8.2",
+    "vite": "3.0.9"
   },
   "type": "module",
   "dependencies": {
-    "@telemetrydeck/sdk": "^1.0.5",
-    "cookie": "^0.4.1",
-    "faunadb": "^4.6.0",
-    "signature_pad": "^4.0.7",
-    "stream": "^0.0.2",
-    "sveltekit-i18n": "^2.2.2",
-    "uuid": "^9.0.0",
-    "xss": "^1.0.14"
+    "@telemetrydeck/sdk": "1.0.5",
+    "cookie": "0.4.2",
+    "faunadb": "4.6.0",
+    "signature_pad": "4.0.7",
+    "stream": "0.0.2",
+    "sveltekit-i18n": "2.2.2",
+    "uuid": "9.0.0",
+    "xss": "1.0.14"
   }
 }
