--- a/package.json
+++ b/package.json
@@ -16,31 +16,28 @@
     "@playwright/test": "1.25.1",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "1.0.0-next.444",
+    "@telemetrydeck/sdk": "^1.0.5",
     "@types/cookie": "0.5.1",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.35.1",
     "@typescript-eslint/parser": "5.35.1",
+    "cookie": "^0.5.0",
     "eslint": "8.23.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-svelte3": "4.0.0",
+    "faunadb": "^4.7.1",
     "prettier": "2.7.1",
     "prettier-plugin-svelte": "2.7.0",
+    "signature_pad": "^4.1.4",
     "svelte": "3.49.0",
     "svelte-check": "2.8.1",
     "svelte-preprocess": "4.10.7",
+    "sveltekit-i18n": "^2.2.2",
     "tslib": "2.4.0",
     "typescript": "4.8.2",
-    "vite": "3.0.9"
+    "uuid": "^9.0.0",
+    "vite": "3.0.9",
+    "xss": "^1.0.14"
   },
-  "type": "module",
-  "dependencies": {
-    "@telemetrydeck/sdk": "1.0.5",
-    "cookie": "0.4.2",
-    "faunadb": "4.6.0",
-    "signature_pad": "4.0.7",
-    "stream": "0.0.2",
-    "sveltekit-i18n": "2.2.2",
-    "uuid": "9.0.0",
-    "xss": "1.0.14"
-  }
+  "type": "module"
 }
