--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "devDependencies": {
     "@playwright/test": "1.25.1",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "1.0.0-next.444",
+    "@sveltejs/kit": "1.0.13",
+    "@sveltejs/adapter-auto": "1.0.0",
     "@telemetrydeck/sdk": "^1.0.5",
     "@types/cookie": "0.5.1",
     "@types/uuid": "8.3.4",
@@ -29,14 +29,14 @@
     "prettier": "2.7.1",
     "prettier-plugin-svelte": "2.7.0",
     "signature_pad": "^4.1.4",
-    "svelte": "3.49.0",
-    "svelte-check": "2.8.1",
-    "svelte-preprocess": "4.10.7",
+    "svelte": "3.55.1",
+    "svelte-check": "3.0.3",
+    "svelte-preprocess": "5.0.1",
     "sveltekit-i18n": "^2.2.2",
     "tslib": "2.4.0",
     "typescript": "4.8.2",
     "uuid": "^9.0.0",
-    "vite": "3.0.9",
+    "vite": "4.0.4",
     "xss": "^1.0.14"
   },
   "type": "module"
