--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "devDependencies": {
     "@playwright/test": "1.25.1",
-    "@sveltejs/kit": "1.0.13",
     "@sveltejs/adapter-auto": "1.0.0",
+    "@sveltejs/kit": "1.0.13",
     "@telemetrydeck/sdk": "^1.0.5",
     "@types/cookie": "0.5.1",
     "@types/uuid": "8.3.4",
@@ -28,6 +28,7 @@
     "faunadb": "^4.7.1",
     "prettier": "2.7.1",
     "prettier-plugin-svelte": "2.7.0",
+    "sass": "^1.57.1",
     "signature_pad": "^4.1.4",
     "svelte": "3.55.1",
     "svelte-check": "3.0.3",
