--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,12 @@
   "singleQuote": false,
   "trailingComma": "none",
   "printWidth": 100,
+  "plugins": ["prettier-plugin-svelte"],
+  "svelteSortOrder" : "options-scripts-markup-styles",
+  "svelteStrictMode": true,
+  "svelteBracketNewLine": false,
+  "svelteAllowShorthand": false,
+  "svelteIndentScriptAndStyle": true,
   "pluginSearchDirs": ["."],
   "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
