--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-site",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "scripts": {
     "dev": "vite dev --port=8080",
     "build": "vite build",
@@ -26,8 +26,8 @@
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-svelte3": "4.0.0",
     "faunadb": "^4.7.1",
-    "prettier": "2.7.1",
-    "prettier-plugin-svelte": "2.7.0",
+    "prettier": "2.8.3",
+    "prettier-plugin-svelte": "^2.7.0",
     "sass": "^1.57.1",
     "signature_pad": "^4.1.4",
     "svelte": "3.55.1",
