--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-svelte3": "4.0.0",
     "faunadb": "^4.7.1",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.1.0",
     "prettier": "2.8.3",
     "prettier-plugin-svelte": "^2.7.0",
     "sass": "^1.57.1",
