--- a/.graphqlconfig.template
+++ b/.graphqlconfig.template
@@ -7,7 +7,7 @@
         "url": "https://graphql.eu.fauna.com/graphql",
         "headers": {
           "user-agent": "JS GraphQL",
-          "authorization": "Bearer fnAEvAgGLVAAzIYzetthP77IgdmA3WO6TQ6u1gDc"
+          "authorization": "Bearer ..."
         },
         "introspect": false
       }
