--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "wrangler:dev": "wrangler pages dev .svelte-kit/cloudflare"
   },
   "devDependencies": {
     "@playwright/test": "1.25.1",
     "@sveltejs/adapter-auto": "1.0.0",
+    "@sveltejs/adapter-cloudflare": "^2.0.1",
     "@sveltejs/kit": "1.0.13",
     "@telemetrydeck/sdk": "^1.0.5",
     "@types/cookie": "0.5.1",
