--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
   "name": "personal-site",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "scripts": {
     "dev": "vite dev --port=8080 --host",
     "build": "vite build",
     "package": "svelte-kit package",
     "preview": "vite preview",
-    "test": "playwright test",
+    "test": "npm run test:integration && npm run test:unit",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
-    "wrangler:dev": "wrangler pages dev .svelte-kit/cloudflare"
+    "test:integration": "playwright test",
+    "test:unit": "vitest"
   },
   "devDependencies": {
-    "@playwright/test": "1.25.1",
-    "@sveltejs/adapter-auto": "1.0.0",
-    "@sveltejs/adapter-cloudflare": "^2.0.1",
-    "@sveltejs/kit": "1.0.13",
+    "@playwright/test": "^1.38.1",
+    "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/kit": "^1.25.0",
     "@telemetrydeck/sdk": "^1.0.5",
-    "@types/cookie": "0.5.1",
-    "@types/uuid": "8.3.4",
-    "@typescript-eslint/eslint-plugin": "5.35.1",
-    "@typescript-eslint/parser": "5.35.1",
+    "@types/cookie": "^0.5.2",
+    "@types/uuid": "^9.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "cookie": "^0.5.0",
-    "eslint": "8.23.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-svelte3": "4.0.0",
-    "faunadb": "^4.7.1",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-svelte": "^2.30.0",
+    "faunadb": "^4.8.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
-    "prettier": "2.8.3",
-    "prettier-plugin-svelte": "^2.7.0",
-    "sass": "^1.57.1",
+    "prettier": "^2.8.8",
+    "prettier-plugin-svelte": "^2.10.1",
+    "sass": "^1.68.0",
     "signature_pad": "^4.1.4",
-    "svelte": "3.55.1",
-    "svelte-check": "3.0.3",
-    "svelte-preprocess": "5.0.1",
+    "svelte": "^4.2.1",
+    "svelte-check": "^3.5.2",
     "sveltekit-i18n": "^2.2.2",
-    "tslib": "2.4.0",
-    "typescript": "4.8.2",
-    "uuid": "^9.0.0",
-    "vite": "4.0.4",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2",
+    "uuid": "^9.0.1",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.5",
     "xss": "^1.0.14"
   },
   "type": "module"
