--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:unit": "vitest"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "latest",
     "@playwright/test": "^1.38.1",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.25.0",
@@ -23,6 +24,7 @@
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
+    "autoprefixer": "^10.4.16",
     "cookie": "^0.5.0",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^8.5.0",
@@ -35,8 +37,10 @@
     "sass": "^1.68.0",
     "signature_pad": "^4.1.4",
     "svelte": "^4.2.1",
+    "svelte-adapter-bun": "^0.5.0",
     "svelte-check": "^3.5.2",
     "sveltekit-i18n": "^2.2.2",
+    "tailwindcss": "^3.3.3",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "uuid": "^9.0.1",
