--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for vrogg-site on 2023-09-25T09:13:13+02:00
+# fly.toml app configuration file generated for vrogg-site on 2023-09-25T13:42:18+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -13,5 +13,6 @@ primary_region = "ams"
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 1
+  max_machines_running = 1
+  min_machines_running = 0
   processes = ["app"]
