--- a/package.json
+++ b/package.json
@@ -1,23 +1,11 @@
 {
   "name": "personal-site",
   "version": "0.1.1",
-  "scripts": {
-    "dev": "vite dev --port=8080 --host",
-    "build": "vite build",
-    "package": "svelte-kit package",
-    "preview": "vite preview",
-    "test": "npm run test:integration && npm run test:unit",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check . && eslint .",
-    "format": "prettier --write .",
-    "test:integration": "playwright test",
-    "test:unit": "vitest"
-  },
   "devDependencies": {
     "@flydotio/dockerfile": "latest",
     "@playwright/test": "^1.38.1",
     "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-node": "^1.3.1",
     "@sveltejs/kit": "^1.25.0",
     "@telemetrydeck/sdk": "^1.0.5",
     "@types/cookie": "^0.5.2",
@@ -29,7 +17,7 @@
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
-    "faunadb": "^4.8.0",
+    "fauna": "^1.2.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
     "prettier": "^2.8.8",
@@ -47,6 +35,19 @@
     "vite": "^4.4.9",
     "vitest": "^0.34.5",
     "xss": "^1.0.14"
+  },
+  "scripts": {
+    "dev": "vite dev --port=8080 --host",
+    "build": "vite build",
+    "package": "svelte-kit package",
+    "preview": "vite preview",
+    "test": "npm run test:integration && npm run test:unit",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write .",
+    "test:integration": "playwright test",
+    "test:unit": "vitest"
   },
   "type": "module"
 }
