--- a/fly.staging.toml
+++ b/fly.staging.toml
@@ -1,18 +1,18 @@
-# fly.toml app configuration file generated for vrogg-site on 2023-09-25T13:42:18+02:00
+# deploy.staging.toml app configuration file generated for vrogg-site-staging on 2023-09-25T14:41:02+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "vrogg-site"
+app = "vrogg-site-staging"
 primary_region = "ams"
-
-[build]
 
 [http_service]
   internal_port = 3000
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
-  max_machines_running = 1
   min_machines_running = 0
-  processes = ["app"]
+  [http_service.concurrency]
+    type = "requests"
+    hard_limit = 250
+    soft_limit = 200
