Update toml files

--- a/fly.production.toml
+++ b/fly.production.toml
@@ -6,6 +6,10 @@
 app = "vrogg-site"
 primary_region = "ams"
 
+[build]
+  dockerfile = "Dockerfile"
+
+
 [http_service]
   internal_port = 3000
   force_https = true
