--- a/fly.staging.toml
+++ b/fly.staging.toml
@@ -6,6 +6,9 @@
 app = "vrogg-site-staging"
 primary_region = "ams"
 
+[build]
+  dockerfile = "Dockerfile"
+
 [http_service]
   internal_port = 3000
   force_https = true
