--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "@flydotio/dockerfile": "latest",
     "@playwright/test": "^1.38.1",
+    "@storyblok/svelte": "^3.1.6",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-node": "^1.3.1",
     "@sveltejs/kit": "^1.25.0",
@@ -12,6 +13,7 @@
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
+    "@vitejs/plugin-basic-ssl": "^1.0.1",
     "autoprefixer": "^10.4.16",
     "cookie": "^0.5.0",
     "eslint": "^8.50.0",
