--- a/.github/workflows/fly-staging.yml
+++ b/.github/workflows/fly-staging.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   deploy:
-    name: Deploy app
+    name: Deploy staging app
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
