--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "scripts": {
     "dev": "vite dev --port=8080 --host",
-    "build": "vite build",
+    "build": "vite build --config=vite.build.config.js",
     "package": "svelte-kit package",
     "preview": "vite preview",
     "test": "npm run test:integration && npm run test:unit",
