--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -8,6 +8,9 @@ jobs:
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: /home/runner/work/personal-site
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
