--- a/.github/workflows/fly-staging.yml
+++ b/.github/workflows/fly-staging.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: echo ${{ github.event.head_commit.timestamp }}
       - run: |
           flyctl deploy \
           --config fly.staging.toml \
