--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-site",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "devDependencies": {
     "@flydotio/dockerfile": "latest",
     "@playwright/test": "^1.38.1",
@@ -22,6 +22,7 @@
     "fauna": "^1.2.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
+    "posthog-node": "^3.1.2",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
     "sass": "^1.68.0",
