--- a/.github/workflows/fly-staging.yml
+++ b/.github/workflows/fly-staging.yml
@@ -22,6 +22,7 @@ jobs:
           --build-secret PUBLIC_CF_IMAGES_ENDPOINT=${{ secrets.PUBLIC_CF_IMAGES_ENDPOINT }} \
           --build-secret PUBLIC_STORYBLOK_TOKEN=${{ secrets.PUBLIC_STORYBLOK_TOKEN }} \
           --build-secret PUBLIC_VERSION_DATE=${{ github.event.head_commit.timestamp }} \
+          --build-secret PUBLIC_POSTHOG_TOKEN=${{ secrets.PUBLIC_POSTHOG_TOKEN }} \
           --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
