--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fauna": "^1.2.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
+    "postcss": "^8.4.31",
     "posthog-node": "^3.1.2",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
