--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,10 @@
 ADMIN_PASSWORD=
-
 PUBLIC_FAUNA_GQL_ENDPOINT=
 PUBLIC_FAUNA_SECRET=
 FAUNA_SECRET=
-
 PUBLIC_TELEMETRYDECK_APP_ID=
-
 PUBLIC_CF_IMAGES_ENDPOINT=
+PUBLIC_STORYBLOK_TOKEN=
+PUBLIC_NODE_ENV=
+PUBLIC_POSTHOG_TOKEN=
+PUBLIC_VERSION_DATE=
