--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
     "@flydotio/dockerfile": "latest",
     "@playwright/test": "^1.38.1",
     "@storyblok/svelte": "^3.1.6",
+    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-interactions": "^7.4.6",
+    "@storybook/addon-links": "^7.4.6",
+    "@storybook/addon-styling-webpack": "^0.0.5",
+    "@storybook/blocks": "^7.4.6",
+    "@storybook/svelte": "^7.4.6",
+    "@storybook/sveltekit": "^7.4.6",
+    "@storybook/testing-library": "^0.2.2",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-node": "^1.3.1",
     "@sveltejs/kit": "^1.25.0",
@@ -17,14 +25,18 @@
     "cookie": "^0.5.0",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-svelte": "^2.30.0",
     "fauna": "^1.2.0",
     "postcss": "^8.4.31",
     "posthog-node": "^3.1.2",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.68.0",
     "signature_pad": "^4.1.4",
+    "storybook": "^7.4.6",
     "svelte": "^4.2.1",
     "svelte-check": "^3.5.2",
     "sveltekit-i18n": "^2.2.2",
@@ -47,7 +59,9 @@
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
     "test:integration": "playwright test",
-    "test:unit": "vitest"
+    "test:unit": "vitest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "type": "module"
 }
