--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/parser": "^6.7.2",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "autoprefixer": "^10.4.16",
+    "chromatic": "^7.4.0",
     "cookie": "^0.5.0",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^8.5.0",
