--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "test:unit": "vitest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic"
+    "chromatic": "npx chromatic --exit-zero-on-changes"
   },
   "type": "module",
   "readme": "ERROR: No README data found!",
