--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-site",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "devDependencies": {
     "@flydotio/dockerfile": "latest",
     "@playwright/test": "^1.38.1",
@@ -13,10 +13,12 @@
     "@storybook/svelte": "^7.4.6",
     "@storybook/sveltekit": "^7.4.6",
     "@storybook/testing-library": "^0.2.2",
+    "@supabase/supabase-js": "^2.38.2",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-node": "^1.3.1",
     "@sveltejs/kit": "^1.25.0",
     "@types/cookie": "^0.5.2",
+    "@types/pg": "^8.10.7",
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
@@ -24,12 +26,17 @@
     "autoprefixer": "^10.4.16",
     "chromatic": "^7.4.0",
     "cookie": "^0.5.0",
+    "drizzle-kit": "^0.19.13",
+    "drizzle-orm": "^0.28.6",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-svelte": "^2.30.0",
     "fauna": "^1.2.0",
+    "node-postgres": "^0.6.2",
+    "pg": "^8.11.3",
     "postcss": "^8.4.31",
+    "postgres": "^3.4.1",
     "posthog-node": "^3.1.2",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
@@ -63,9 +70,9 @@
     "test:unit": "vitest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --exit-zero-on-changes"
+    "chromatic": "npx chromatic --exit-zero-on-changes",
+    "drizzle:introspect": "npx drizzle-kit introspect:pg && rm -f drizzle/*.sql && rm -rf drizzle/meta"
   },
   "type": "module",
-  "readme": "ERROR: No README data found!",
   "_id": "personal-site@0.1.2"
 }
