--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,17 @@
-ADMIN_PASSWORD=
-PUBLIC_FAUNA_GQL_ENDPOINT=
-PUBLIC_FAUNA_SECRET=
-FAUNA_SECRET=
-PUBLIC_TELEMETRYDECK_APP_ID=
 PUBLIC_CF_IMAGES_ENDPOINT=
+
 PUBLIC_STORYBLOK_TOKEN=
-PUBLIC_NODE_ENV=
+
+PUBLIC_NODE_ENV=development
+
 PUBLIC_POSTHOG_TOKEN=
+
 PUBLIC_VERSION_DATE=
+
+PUBLIC_SIGNATURES_WORKER=http://localhost:8787
+
+WORKER_PSK=
+
+ADMIN_PASSWORD=
+
+CHROMATIC_PROJECT_TOKEN=
