--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -5,7 +5,8 @@ on:
     branches: [main]
 
 jobs:
-  deploy:
+
+  deploy-app:
     name: Deploy app
     runs-on: ubuntu-latest
     steps:
@@ -24,3 +25,6 @@ jobs:
           --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+
+  deploy-workers:
+    uses: ./.github/workflows/workers.yml
