--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -27,4 +27,5 @@ jobs:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
   deploy-workers:
+    name: Deploy workers
     uses: ./.github/workflows/workers.yml
