--- a/.github/workflows/fly-staging.yml
+++ b/.github/workflows/fly-staging.yml
@@ -29,3 +29,5 @@ jobs:
   deploy-workers:
     name: Deploy workers
     uses: ./.github/workflows/workers.yml
+    secrets:
+      CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
