--- a/.github/workflows/workers.yml
+++ b/.github/workflows/workers.yml
@@ -13,8 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-      - working-directory: ./workers/ps-signatures
-        run: npm ci
+      - run: npm ci
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
