--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -22,6 +22,7 @@ jobs:
           --build-secret PUBLIC_SIGNATURES_WORKER=${{ secrets.PUBLIC_SIGNATURES_WORKER }} \
           --build-secret ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }} \
           --build-secret WORKER_PSK=${{ secrets.WORKER_PSK }} \
+          --build-secret RESEND_TOKEN=${{ secrets.RESEND_TOKEN }} \
           --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
