--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
+		"@awesome.me/kit-fb271958c9": "^1.0.42",
 		"@eslint/compat": "^1.2.3",
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"autoprefixer": "^10.4.20",
+		"embla-carousel-svelte": "^8.5.1",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -31,9 +33,9 @@
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
-		"vite": "^6.0.0",
-		"@awesome.me/kit-fb271958c9": "^1.0.42"
+		"vite": "^6.0.0"
 	},
 	"dependencies": {
+		"embla-carousel-autoplay": "^8.5.1"
 	}
 }
