--- a/.github/workflows/workers.yml
+++ b/.github/workflows/workers.yml
@@ -1,21 +1,20 @@
-name: CF Workers Deploy
+# name: CF Workers Deploy
+# on:
+#   workflow_call:
+#     secrets:
+#       CF_API_TOKEN:
+#         required: true
 
-on:
-  workflow_call:
-    secrets:
-      CF_API_TOKEN:
-        required: true
-
-jobs:
-  deploy-workers:
-    name: Deploy ps-signature worker
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-      - run: npm ci
-      - name: Deploy
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CF_API_TOKEN }}
-          workingDirectory: "./workers/ps-signatures/"
+# jobs:
+#   deploy-workers:
+#     name: Deploy ps-signature worker
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-node@v3
+#       - run: npm ci
+#       - name: Deploy
+#         uses: cloudflare/wrangler-action@v3
+#         with:
+#           apiToken: ${{ secrets.CF_API_TOKEN }}
+#           workingDirectory: "./workers/vr-www-signatures/"
