--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,14 +8,8 @@ services = [{ binding = "SIGNATURES_WORKER", service = "vr-www-signatures-rs" }]
 [vars]
 NODE_VERSION = "22"
 
-[env.production.vars]
-NODE_VERSION = "22"
 
-[[env.production.kv_namespaces]]
-id = "32e66cce63054f4c8a94d586d1ee71d6"
-binding = "KV"
-
-[[env.production.d1_databases]]
+[[d1_databases]]
 database_id = "e903d5ec-aa82-4080-af4c-ba8c11e01875"
 binding = "D1"
 database_name = "D1"
