--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"@awesome.me/kit-fb271958c9": "^1.0.42",
 		"@eslint/compat": "^1.2.3",
 		"@jaames/iro": "^5.5.2",
+		"@melt-ui/pp": "^0.3.2",
+		"@melt-ui/svelte": "^0.86.2",
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/adapter-cloudflare": "^4.8.0",
 		"@sveltejs/adapter-node": "^5.2.9",
