--- a/workers/vr-www-signatures-rs/Cargo.toml
+++ b/workers/vr-www-signatures-rs/Cargo.toml
@@ -27,3 +27,5 @@ serde_json = "1.0"
 wasm-bindgen = "0.2.99"
 serde-wasm-bindgen = "0.6.5"
 chrono = { version = "0.4.38", features = [] }
+human_ids = "0.1.1"
+petname = "2.0.2"
