--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vr-www",
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
@@ -23,6 +23,7 @@
 		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tailwindcss/typography": "^0.5.15",
 		"autoprefixer": "^10.4.20",
 		"embla-carousel": "^8.5.1",
 		"embla-carousel-autoplay": "^8.5.1",
@@ -31,9 +32,13 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"mdsvex": "^0.12.3",
+		"posthog-js": "^1.204.0",
+		"posthog-node": "^4.3.2",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
+		"shiki": "^1.24.2",
 		"signature_pad": "^5.0.4",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
