Publishing v1 of wassererbe

--- a/.env.template
+++ b/.env.template
@@ -1,17 +1,8 @@
-PUBLIC_CF_IMAGES_ENDPOINT=
-
-PUBLIC_STORYBLOK_TOKEN=
-
-PUBLIC_NODE_ENV=development
-
-PUBLIC_POSTHOG_TOKEN=
-
-PUBLIC_VERSION_DATE=
-
-PUBLIC_SIGNATURES_WORKER=http://localhost:8787
-
-WORKER_PSK=
-
-ADMIN_PASSWORD=
-
-CHROMATIC_PROJECT_TOKEN=
+PUBLIC_CF_TURNSTILE_SITE_KEY=
+CF_TURNSTILE_SECRET_KEY=
+FONTAWESOME_TOKEN=
+RESEND_TOKEN=
+SIGNATURES_WORKER_KEY=testkey
+APP_VERSION=development
+# APP_VERSION=production
+PUBLIC_POSTHOG_PROJECT_ID=
