Add obacht project

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "3.1.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --host",
 		"build": "vite build",
 		"build:watch": "vite build --watch",
 		"preview": "vite preview",
